# ocr_text_bot

./: .gitattributes  .gitignore  README.md  azure-pipelines.yml  handler.py  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/workflows/: python.yml
